# smallcap-quant-ml

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
config/: settings.py  tickers_smallcap.txt
data/: calibration_all.csv  strategies_candidates.json  universe_admitted.csv
data/features/: features_ABSI.csv  features_EBON.csv  features_HBIO.csv  features_HOTH.csv  features_IMUX.csv  features_KPTI.csv  features_LRMR.csv  features_MCRB.csv  features_SGMO.csv
data/labeled/: labeled_ABSI.csv  labeled_EBON.csv  labeled_HBIO.csv  labeled_HOTH.csv  labeled_IMUX.csv  labeled_KPTI.csv  labeled_LRMR.csv  labeled_MCRB.csv  labeled_SGMO.csv
docs/legacy/: model.py
docs/results/: results_summary.csv
notebooks/: 01_eda.ipynb  01_eda_executed.ipynb  02_risk_calibration.ipynb  02_strategy_generator.ipynb  03_backtest_strategies.ipynb  03_feature_engineering.ipynb  04_labeling.ipynb  05_strategy_builder.ipynb  06_backtest_strategies.ipynb
scripts/: batch_calibrate.py  generate_results_dashboard.py  setup_env.sh
src/: __init__.py  data.py  features.py  labeling.py  risk.py  strategy_builder.py
tests/: test_feature_risk_compat.py
